--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "CRUD-Back-End-NodeJs-PostgreSQL",
   "version": "1.0.0",
   "description": "> CRUD com Node.js & PostgreSQL com enfoque no Back-End.\r > Este projeto tem como principal objetivo criar uma API RESTful e que no final deve ser persistada no PostgreSQL.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "lint": "eslint --ext .js, -f ./node_modules/eslint-friendly-formatter . --fix",
+    "prepush": "npm run lint",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/severinoufam/CRUD-Back-End-NodeJs-PostgreSQL.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+      "nodejs",
+      "api",
+      "crud",
+      "azure-functions",
+      "express",
+      "github-actions",
+      "swa",
+      "serverless",
+      "azure",
+      "postgresql",
+      "sql",
+      "javascript"
+  ],
+  "author": "Severino de Souza Souza",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/severinoufam/CRUD-Back-End-NodeJs-PostgreSQL/issues"
@@ -25,6 +41,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-friendly-formatter": "^4.0.1",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "pg": "^8.5.1"
