--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,13 +1,18 @@
 {
     "env": {
         "browser": true,
-        "es2021": true,
+        "es6": true,
         "node": true
     },
     "extends": "eslint:recommended",
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": 2018,
         "sourceType": "module"
     },
-    "rules": {}
+    "rules": {
+    }
 }
